chunks/python/errors_chunk_1.txt
[ ![Python logo](../_static/py.svg) ](https://www.python.org/) dev (3.14)3.13.03.123.113.103.93.83.73.63.53.43.33.23.13.02.72.6

EnglishSpanishFrenchItalianJapaneseKoreanBrazilian PortugueseTurkishSimplified ChineseTraditional Chinese

Theme  Auto Light Dark

### [Table of Contents](../contents.html)

  * [8. Errors and Exceptions](#)
    * [8.1. Syntax Errors](#syntax-errors)
    * [8.2. Exceptions](#exceptions)
    * [8.3. Handling Exceptions](#handling-exceptions)
    * [8.4. Raising Exceptions](#raising-exceptions)
    * [8.5. Exception Chaining](#exception-chaining)
    * [8.6. User-defined Exceptions](#user-defined-exceptions)
    * [8.7. Defining Clean-up Actions](#defining-clean-up-actions)
    * [8.8. Predefined Clean-up Actions](#predefined-clean-up-actions)
    * [8.9. Raising and Handling Multiple Unrelated Exceptions](#raising-and-handling-multiple-unrelated-exceptions)
    * [8.10. Enriching Exceptions with Notes](#enriching-exceptions-with-notes)



#### Previous topic

[7. Input and Output](inputoutput.html "previous chapter")

#### Next topic

[9. Classes](classes.html "next chapter")

### This Page

  * [Report a Bug](../bugs.html)
  * [Show Source ](https://github.com/python/cpython/blob/main/Doc/tutorial/errors.rst)



### Navigation

  * [index](../genindex.html "General Index")
  * [modules](../py-modindex.html "Python Module Index") |
  * [next](classes.html "9. Classes") |
  * [previous](inputoutput.html "7. Input and Output") |
  * ![Python logo](../_static/py.svg)
  * [Python](https://www.python.org/) »
  * EnglishSpanishFrenchItalianJapaneseKoreanBrazilian PortugueseTurkishSimplified ChineseTraditional Chinese

dev (3.14)3.13.03.123.113.103.93.83.73.63.53.43.33.23.13.02.72.6

  * [3.13.0 Documentation](../index.html) » 
  * [The Python Tutorial](index.html) »
  * [8. Errors and Exceptions]()
  * | 
  * Theme  Auto Light Dark |



# 8. Errors and Exceptions[¶](#errors-and-exceptions "Link to this heading")

Until now error messages haven’t been more than mentioned, but if you have tried out the examples you have probably seen some. There are (at least) two distinguishable kinds of errors: _syntax errors_ and _exceptions_.

## 8.1. Syntax Errors[¶](#syntax-errors "Link to this heading")

Syntax errors, also known as parsing errors, are perhaps the most common kind of complaint you get while you are still learning Python:

>>>```

    
    
    >>> while True print('Hello world')
     File "<stdin>", line 1
    while True print('Hello world')
    ^^^^^
    SyntaxError: invalid syntax
    
```

The parser repeats the offending line and displays little ‘arrow’s pointing at the token in the line where the error was detected. The error may be caused by the absence of a token _before_ the indicated token. In the example, the error is detected at the function [`print()`](../library/functions.html#print "print"), since a colon (`':'`) is missing before it. File name and line number are printed so you know where to look in case the input came from a script.

## 8.2. Exceptions[¶](#exceptions "Link to this heading")

Even if a statement or expression is syntactically correct, it may cause an error when an attempt is made to execute it. Errors detected during execution are called _exceptions_ and are not unconditionally fatal: you will soon learn how to handle them in Python programs. Most exceptions are not handled by programs, however, and result in error messages as shown here:

>>>```

    
    
    >>> 10 * (1/0)
    Traceback (most recent call last):
     File "<stdin>", line 1, in <module>
    10 * (1/0)
    ~^~
    ZeroDivisionError: division by zero
    >>> 4 + spam*3
    Traceback (most recent call last):
     File "<stdin>", line 1, in <module>
    4 + spam*3
    ^^^^
    NameError: name 'spam' is not defined
    >>> '2' + 2
    Traceback (most recent call last):
     File "<stdin>", line 1, in <module>
    '2' + 2
    ~~~~^~~
    TypeError: can only concatenate str (not "int") to str
    
```

The last line of the error message indicates what happened. Exceptions come in different types, and the type is printed as part of the message: the types in the example are [`ZeroDivisionError`](../library/exceptions.html#ZeroDivisionError "ZeroDivisionError"), [`NameError`](../library/exceptions.html#NameError "NameError") and [`TypeError`](../library/exceptions.html#TypeError "TypeError").